# Kent-Erlang-Robotic-Library

./: INSTALL.fedora  INSTALL.txt  Makefile  Makefile.in  README.txt  config.h.in  configure  configure.ac
doc/: Makefile.in
doc/cdoc/: Doxyfile  Makefile
doc/edoc/: Makefile
examples/: Makefile  multibouncer.erl  wallfollow.erl
examples/avoider/: README  avoid.erl
examples/traffic/: README  traffic.erl  traffic2.erl
examples/wallfollow/: Makefile.in  wallfollow.erl
include/: common_kerl.h  player_kerl.h
kerlplayerlib/: Makefile  Makefile.in  kerl.cpp  player_kerl.cpp
module/: comm.erl  driver.erl  dvh.erl  mrh.erl  mvh.erl  player.erl  rih.erl  trimaths.erl
stage/: multibouncer.world  snake.cfg  wallfollow.world  world.sh
stage/traffic/: .player  simple.cfg
tags/0.2.0/: Makefile  README.txt
tags/0.2.0/examples/avoider/: README  avoid.erl
tags/0.2.0/kerlplayerlib/: Makefile
tags/0.2.0/module/: mrh.erl  rih.erl  trimaths.erl
tags/0.2.1/: INSTALL.txt
tags/0.2.1/doc/: Makefile
tags/0.2.1/examples/: multibouncer_diff.erl  simple.erl
tags/0.2.1/examples/wallfollow/: wallfollow.erl
tags/0.2.1/install/: installvm.sh
tags/0.2.1/kerlplayerlib/: driver_kerl.cpp  kerl.cpp
tags/0.3.0/: README.txt
tags/0.3.0/doc/edoc/: Makefile
tags/0.3.0/examples/: masterslave.erl
tags/0.3.0/kerlplayerlib/: ei_extended.cpp
tags/0.4.0/: INSTALL.fedora  INSTALL.txt  Makefile  README.txt
tags/0.4.0/kerlplayerlib/: kerl.cpp
tags/0.4.0/module/: Makefile  driver.erl  mrh.erl  multi.erl  mvh.erl  player.erl
tags/0.4.0/stage/: masterslave.cfg  multibouncer.cfg  wallfollow.cfg
tags/0.4.1/: INSTALL.fedora  INSTALL.txt  README.txt
tags/0.4.1/examples/: TUTORIAL_MULTI.txt  bouncer.erl  multibouncer_diff.erl
tags/0.4.1/include/: kerl.h
tags/0.4.1/kerlplayerlib/: common_kerl.cpp
tags/0.4.1/module/: memo.erl  rih.erl
tags/0.4.1/stage/: pioneer.inc  snake.cfg  world.sh
tags/0.5.0/: INSTALL.fedora  README.txt
tags/0.5.0/examples/: multibouncer.erl
tags/0.5.0/install/: fedora-install.html  installps.sh  tutorial.tex
tags/0.5.0/kerlplayerlib/: Makefile.in
tags/0.5.0/module/: Makefile.in  dvh.erl
tags/0.5.0/stage/: masterslave.world  snake.world
trunk/: INSTALL.txt  Makefile.in  README.txt  configure  configure.ac
trunk/assignments/: wallfollow
trunk/doc/cdoc/: Doxyfile
trunk/doc/edoc/: Makefile
trunk/examples/: Makefile  multibouncer_time.erl  snake.erl
trunk/examples/avoider/: Makefile  avoid.erl
trunk/examples/traffic/: Makefile.in  traffic.erl  traffic2.erl  traffic2.sh
trunk/examples/wallfollow/: README  wallfollow.erl
trunk/include/: common.hrl  common_kerl.h  ei_extended.h  player_kerl.h
trunk/install/: tutorial.tex
trunk/kerlplayerlib/: Makefile  Makefile.in  kerl.cpp  player_kerl.cpp
trunk/module/: Makefile  Makefile.in  driver.erl  dvh.erl  mrh.erl  mvh.erl  rih.erl  trimaths.erl
trunk/stage/: erlang09.cfg  erlang09.world  snake.world
trunk/stage/traffic/: .player  simple.world  wide.cfg  wide.world
(+10 files in other folders)
